tester version v2